--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hinge</string>
+    <string name="designed_to_be_deleted">Designed to be deleted.</string>
 </resources>
