--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="designed_to_be_deleted">Designed to be deleted.</string>
     <string name="or_continue_with_phone_number">Or continue with phone number</string>
     <string name="continue_with_facebook">Continue with Facebook</string>
+    <string name="settings">Settings</string>
+    <string name="boost">Boost</string>
+    <string name="help_centre">Help Centre</string>
+    <string name="account">Account</string>
+    <string name="preference">Preferences</string>
+    <string name="Name">Nipun</string>
+    <string name="learnmore">Learn more</string>
+    <string name="prefered_member">Preferred Members go on twice as many dates.</string>
+    <string name="just_joined">Just Joined</string>
 </resources>
