--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="learn_how_we_process">Learn how we process</string>
     <string name="by_signing_up_for_hinge_you_agree_to_our">By signing up for Hinge, you agree to our</string>
     <string name="hinge_full_logo">Hinge full logo</string>
+    <string name="when_i_see_an_android_developer">When I see an Android developer</string>
+    <string name="by_showing_me_the_code">By showing me the code.</string>
+    <string name="looking_for_an_android_developer">Looking for an android developer</string>
+    <string name="lisa">Lisa</string>
 </resources>
