--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="learn_how_we_process">Learn how we process</string>
     <string name="by_signing_up_for_hinge_you_agree_to_our">By signing up for Hinge, you agree to our</string>
     <string name="hinge_full_logo">Hinge full logo</string>
+    <string name="_0_complete">0% Complete</string>
+    <string name="edit">Edit</string>
 
 </resources>
