"Like_you_screen"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,8 +60,12 @@
     <string name="my_cool_pic_with_my_cool_phone">My cool pic with my cool phone.</string>
     <string name="my_ex_build_brawl_stars">My ex build Brawl Stars.</string>
     <string name="the_way_to_win_me_over_is">The way to win me over is</string>
-
-
+    <string name="like_you">Like You</string>
+    <string name="new_likes_will_appear_here">New Likes Will appear here.</string>
+    <string name="for_more_likes_now">for more likes now</string>
+    <string name="upgrade">Upgrade</string>
+    <string name="preferred_members_can_vies_all_their_like_at_once">Preferred members can vies all their like at once</string>
+    <string name="up_next">Up next</string>
 
 
 </resources>
