--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="_1750_00_291_66_each">₹1750.00 (₹291.66/each)</string>
     <string name="roses">Roses</string>
     <string name="_2650_00_220_83_each">₹2650.00 (₹220.83/each)</string>
-
+    <string name="new_matches_will_appear_here">New matches will appear here.</string>
 
 
 </resources>
