intend from phone_num to verified with checking and otp functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="upgrade">Upgrade</string>
     <string name="preferred_members_can_vies_all_their_like_at_once">Preferred members can vies all their like at once</string>
     <string name="up_next">Up next</string>
-
+    <string name="what_s_your">What\'s your phone</string>
 
 
 </resources>
