--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,15 +117,23 @@
     <string name="gender">Gender</string>
     <string name="age">Age</string>
     <string name="age_can_only_be_changed_once">Age can only be changed once</string>
-    <string name="women">Women</string>
+
     <string name="man">Man</string>
     <string name="feedback_on_genders">Feedback on genders?</string>
     <string name="why_last_name">Why last name?</string>
     <string name="adding_your_last_name_helps_create_a_safer_more_authentic_and_accountable_community">Adding your last name helps create a safer, more authentic and accountable community</string>
     <string name="ok_got_it">OK got it</string>
-    <string name="no">No</string>
+
     <string name="yes">Yes</string>
     <string name="go_back">Go back</string>
+
+    <string name="agra">Agra</string>
+    <string name="drugs">Drugs</string>
+    <string name="marijuana">Marijuana</string>
+
+    <string name="children">Children</string>
+    <string name="family_plans">Family plans</string>
+    <string name="upgrade_for_access">● Upgrade for access</string>
 
 
 </resources>
